modules/wycs/tests/valid/test_arith_22.wyal
assert:
   forall (int x):
     if:
        x <= 0
        2*x >= 0
     then:
        x == 0

