modules/wycs/tests/invalid/test_017.wyal
assert:
  forall(int x):
    x * x > 0
